Use ReflectionSupport.findAllResourcesInPackage for resource loading